feat: complete phase 2 onboarding and profile